[project]
name = "yemeng"
version = "0.1.0"
description = "yemeng"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_gocqhttp", "nonebot_plugin_bfchat", "nonebot_plugin_setu", "nonebot_plugin_apex_api_query", "nonebot_plugin_60s", "nonebot_plugin_htmlrender", "nonebot_plugin_naturel_gpt"]
plugin_dirs = ["yemeng/plugins"]
builtin_plugins = ["echo"]
